--- a/index.css
+++ b/index.css
@@ -1,7 +1,10 @@
 body {
     background-color: #2c3e50;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-  
+
 .btn {
     cursor: pointer;
 }
